--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.3.0",
     "nuxt": "^3.10.1",
     "nuxt-icon": "^0.6.8",
+    "sass": "^1.71.1",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-carousel-nuxt": "^1.1.0"
   }
 }
