--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
     "vue3-carousel-nuxt": "^1.1.0"
+  },
+  "devDependencies": {
+    "vite-plugin-top-level-await": "^1.4.1"
   }
 }
