--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "nuxt-icon": "^0.6.8",
     "sass": "^1.71.1",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5",
-    "vue3-carousel-nuxt": "^1.1.0"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "vite-plugin-top-level-await": "^1.4.1"
